--- a/.env.example
+++ b/.env.example
@@ -19,12 +19,18 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
+
+MIDTRANS_SERVER_KEY=SB-Mid-server-RUdNvp4aF08AaTGzcXP91I4B
+MIDTRANS_CLIENT_KEY=SB-Mid-client-kF_Joo9hfN3hL_CW
+MIDTRANS_IS_PRODUCTION=false
+MIDTRANS_IS_SANITIZED=true
+MIDTRANS_IS_3DS=true
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
